# AIbot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  main.py  pyproject.toml
adapter/: __init__.py  event.py  message.py  onebot_v11.py  webhook.py
agent/: __init__.py  auto_memory.py  compressor.py  engine.py  hooks.py  mcp_client.py  model_registry.py  orchestrator.py  perception.py  persona.py  planner.py  proactive.py  self_improver.py  workflow.py
agent/memory/: store.py
agent/skills/: registry.py
agent/skills/builtin/: general-assistant.md
agent/tools/: agent_tool.py  base.py  config_tool.py  file_tools.py  group_file_tool.py  knowledge_tools.py  persona_tool.py  plan_tools.py  qq_tools.py  registry.py  system_tools.py  task_tools.py  vision_tool.py  web_tools.py
pipeline/: scheduler.py
pipeline/stages/: __init__.py  decorate.py  preprocess.py  process.py  rate_limit.py  respond.py  safety.py  wake_check.py
plugins/: base.py  dependency.py  registry.py  session.py
providers/: __init__.py  anthropic.py  base.py  openai.py
security/: auth.py  sanitizer.py
storage/: db.py
tests/: test_auth.py  test_config.py  test_engine.py  test_message.py  test_pipeline.py
utils/: config.py  logger.py
webui/: __init__.py  openapi.py  server.py
webui/templates/: login.html  panel.html
