[project]
name = "qq-agent"
version = "1.0.0"
description = "万能 QQ AI Agent — 基于 Claude Code Agent 模式的智能 QQ 机器人"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "httpx>=0.25",
    "watchfiles>=0.20",
]

[project.optional-dependencies]
webui = ["aiohttp>=3.9"]
all = ["aiohttp>=3.9"]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
